welcome.lessons.welcome.array.maxvalue.Extrema.scala.error
extrema:18: error: not found: value max
return max-min
       ^