welcome.lessons.welcome.array.maxvalue.Extrema.scala.code
def extrema(nums:Array[Int]): Int =
{
var maximum=nums(0)
var minimum=nums(0)

	for(i<-0 to (nums.length-1))
	{
		if(nums(i)<minimum)
		{
			minimum=nums(i)
		}

		if(nums(i)>maximum)
		{
			maximum=nums(i)
		}
	}
return max-min
}